--- a/css/style.css
+++ b/css/style.css
@@ -493,7 +493,7 @@ section{
 }
 
 .top-nft .container__button--mobile{
-    margin-top: 2.5rem;
+    margin-top: 2.4rem;
 }
 
 .authors .container__button--mobile{
@@ -516,7 +516,7 @@ section{
 
 .card{
     box-sizing: border-box;
-    padding: 1.5rem 1rem;
+    padding: 1rem 1rem;
     backdrop-filter: blur(15px);
 }
 
@@ -820,7 +820,6 @@ section{
     display: none;
 }
 
-
 @media (max-width: 768px) {
 
     .header .menu {
@@ -915,7 +914,7 @@ section{
 
 @media (max-width: 1024px) {
     .discover .profile{
-        padding-top: 9rem;
+        padding-top: 13rem;
         padding-right: 0;
         width: 100%;
     }
@@ -937,7 +936,7 @@ section{
 
 @media (max-width: 1024px) {
     .discover .profile .picture{
-        top: -4rem;
+        top: -10rem;
     }
 }
 
@@ -1004,7 +1003,6 @@ section{
 }
 
 .discover .section__title .main{
-    display: block;
     font-family: Spartan-SemiBold-woff, serif;
     font-size: clamp(42px, 4.1vw, 66.33px);
 
@@ -1215,7 +1213,7 @@ section{
     width: 100%;
     max-width: 25rem;
     right: 0;
-    bottom: 0;
+    bottom: -1.6rem;
 
     overflow: hidden;
 }
@@ -1224,13 +1222,14 @@ section{
     .discover .profile .wrapper{
         left: auto;
         right: auto;
+        bottom: 0.5rem;
     }
 }
 
 
 .discover .profile .content{;
     display: flex;
-    gap: 4rem;
+    justify-content: space-between;
 
     clip-path: polygon(15% 0, 100% 0, 100% 50%, 100% 100%, 0 100%, 0 25%);
 
@@ -1239,8 +1238,6 @@ section{
 .discover .profile .content::before {
     border-radius: 10px;
 }
-
-
 
 @media  (max-width: 575px) {
     .discover .content{
@@ -1447,7 +1444,7 @@ section{
 
 @media (max-width: 1024px) {
     .top-nft{
-        padding-top: 12.5rem;
+        padding-top: 7.7rem;
     }
 }
 
@@ -1474,6 +1471,13 @@ section{
 
 .top-nft .swiper .slide__card{
     justify-content: space-between;
+    padding: 3.18rem 1.7rem 2.5rem 2.5rem;
+}
+
+@media (max-width: 1024px) {
+    .top-nft .swiper .slide__card{
+        padding: 2rem 1rem 1.2rem 2rem;
+    }
 }
 
 .top-nft .swiper .profile{
@@ -1533,9 +1537,9 @@ section{
 }
 
 @media (max-width: 1024px) {
-    .price{
-        padding-top: 1.4rem;
+    .top-nft .swiper .price{
         gap: 0.3rem;
+        padding-top: 1.4rem;
     }
 }
 
@@ -1665,6 +1669,12 @@ section{
     flex-direction: column;
 }
 
+@media (max-width: 1024px) {
+    .tabs .tabs__section{
+        width: 100%;
+    }
+}
+
 .tabs .tabs__section .title{
     align-items: center;
     justify-content: flex-start;
@@ -1680,7 +1690,7 @@ section{
 }
 
 @media (max-width: 1024px) {
-    .container{
+    .tabs .tabs__section .container{
         padding-top: 1.5rem;
         gap: 1.4rem;
     }
@@ -1789,6 +1799,29 @@ section{
     }
 }
 
+.authors .section__title{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+@media (max-width: 1024px) {
+    .authors .section__title{
+        justify-content: flex-start;
+    }
+}
+
+@media (max-width: 1024px) {
+    .authors .section__title .container{
+        display: none;
+    }
+}
+
+.authors .section__title .ico{
+    max-width: 3.5rem;
+    max-height: 1.5rem;
+}
+
 .authors .swiper{
     margin-top: 3.5rem;
     overflow: visible;
@@ -1800,10 +1833,7 @@ section{
     }
 }
 
-.authors .title .ico{
-    max-width: 3.5rem;
-    max-height: 1.5rem;
-}
+
 
 .authors .swiper-slide{
     flex-direction: column;
@@ -1845,13 +1875,13 @@ section{
 }
 
 @media (max-width: 1024px) {
-    .title{
+    .authors .swiper .title{
         padding-top: 0.6rem;
         gap: 0.3rem;
     }
 }
 
-.container{
+.authors .title .container{
     align-items: center;
     text-align: center;
     justify-content: center;
@@ -1920,7 +1950,7 @@ section{
 }
 
 @media (max-width: 1024px) {
-    .button {
+    .authors .swiper .button {
         padding: 0.5rem 4rem;
     }
 }
@@ -1937,7 +1967,7 @@ section{
 
 @media (max-width: 1024px) {
     .sellers{
-        padding-top: 7.3rem;
+        padding-top: 8rem;
     }
 }
 
@@ -2062,6 +2092,12 @@ section{
     margin-top: 4rem;
     overflow: hidden;
     height: calc((120px * 4) + (30px * 3)) !important;
+}
+
+@media (max-width: 1024px) {
+    .sellers .swiper {
+        margin-top: 1.6rem;
+    }
 }
 
 @media (max-width: 768px) {
@@ -2218,6 +2254,10 @@ section{
     font-size: clamp(0.7rem, 1.3rem, 2.5rem);
 }
 
+.sellers .container__button--mobile{
+    margin-top: 1.8rem;
+}
+
 /*info*/
 
 .info{
@@ -2233,7 +2273,7 @@ section{
 
 @media (max-width: 1024px) {
     .info{
-        margin-top: 7rem;
+        margin-top: 7.6rem;
     }
 }
 
@@ -2290,13 +2330,13 @@ section{
 @media (max-width: 1024px) {
     .info .container{
         margin-right: 0;
-        padding: 2.5rem 2.5rem 1.7rem 2.5rem;
-        transform: translateY(39%);
-        gap: 1rem;
+        padding: 2.5rem 2.5rem 1.5rem 2.5rem;
+        transform: translateY(44%);
+        gap: 0.8rem;
     }
 }
 
-.links{
+.info .links{
     padding-top: 0.7rem;
 
     display: flex;
@@ -2309,8 +2349,8 @@ section{
 }
 
 @media (max-width: 1024px) {
-    .links{
-        padding-top: 0.2rem;
+    .info .links{
+        padding-top: 0.3rem;
     }
 }
 
@@ -2352,8 +2392,8 @@ section.form{
 }
 
 @media (max-width: 1024px) {
-    .form{
-        padding-top: 15.2rem;
+    section.form{
+        padding-top: 16.6rem;
 
         flex-direction: column;
         justify-content: center;
@@ -2425,7 +2465,7 @@ section.form{
 }
 
 @media (max-width: 575px) {
-    .input-container{
+    .form .input-container{
         padding-top: 1rem;
         width: 100%;
     }
@@ -2446,6 +2486,19 @@ section.form{
     .form .input{
         padding: 0.8rem 1.2rem;
     }
+}
+
+.form .button-container{
+    border-radius: 0 0.4rem 0.4rem 0;
+}
+
+.form .button{
+    border-radius: 0 0.4rem 0.4rem 0;
+}
+
+.form .button-text{
+    font-family: Inter-Medium-woff, serif;
+    font-size: clamp(10.22px, 1vw, 15.48px);
 }
 
 
