--- a/css/style.css
+++ b/css/style.css
@@ -1989,6 +1989,7 @@ section{
 }
 
 .sellers .title .main .dropdown{
+    cursor: pointer;
     position: relative;
     display: flex;
     align-items: center;
@@ -1996,10 +1997,6 @@ section{
     text-align: center;
 
     gap: 0.5rem;
-}
-
-.sellers .title .dropdown-open .content {
-    display: flex;
 }
 
 .sellers .dropdown .text{
@@ -2016,6 +2013,7 @@ section{
     position: absolute;
 
     top: 130%;
+    height: 0;
     overflow: visible;
 
     flex-direction: column;
@@ -2030,14 +2028,23 @@ section{
             var(--ocean-blue)) 1;
 
     cursor: pointer;
-    transition: all 0.3s ease;
     width: fit-content;
     padding: 1.5rem 2rem 1.5rem 1rem;
     gap: 2rem;
+
     z-index: 10;
+
+    transition: all 0.3s ease;
+}
+
+.sellers .title .dropdown-open .content {
+    display: flex;
+    height: fit-content;
 }
 
 .sellers .dropdown .item{
+    text-align: start;
+    width: 100%;
     position: relative;
     color: rgba(255,255,255,0.4);
     display: block;
@@ -2045,10 +2052,12 @@ section{
 }
 
 .sellers .dropdown .item:not(:last-child)::after{
+
     content: '';
     position: absolute;
 
-    width: 7rem;
+    /*width: calc(100% - 3rem);*/
+    width: 100%;
     height: 0.1rem;
 
     bottom: -50%;
@@ -2102,17 +2111,17 @@ section{
 
 @media (max-width: 768px) {
     .sellers .swiper{
-        height: calc((90px * 4) + (30px * 3)) !important;
+        display: none;
     }
 }
 
-.sellers .swiper .swiper-wrapper{
+.sellers .swiper-wrapper{
     display: flex;
     justify-content: center;
     flex-direction: column;
 }
 
-.slide__sellers{
+.sellers .slide__sellers{
     flex-shrink: 0;
 
     display: flex;
@@ -2129,21 +2138,20 @@ section{
 }
 
 @media (max-width: 1440px) {
-    .slide__sellers{
+    .sellers .swiper .slide__sellers{
         width: calc((100%  / 2 ) - 30px);
     }
 }
 
 @media (max-width: 768px) {
-    .slide__sellers{
+    .sellers .swiper .slide__sellers{
         width: 100%;
         height: 90px !important;
         margin-left: 0!important;
     }
-
 }
 
-.slide__sellers::after {
+.sellers .slide__sellers:after {
     content: '';
     position: absolute;
     inset: 0;
@@ -2156,21 +2164,21 @@ section{
     border-radius: 2rem;
 }
 
-.sellers__id{
+.sellers .sellers__id{
     padding-left: 0.3rem;
     font-family: Roboto-Regular-woff, serif;
     font-size: clamp(13.81px, 1.3vw, 19px);
 }
 
-.sellers__picture{
+.sellers .sellers__picture{
     padding-left: 1.2rem;
 }
 
-.sellers__picture-img{
+.sellers .sellers__picture-img{
     max-width: 5rem;
 }
 
-.sellers__profile{
+.sellers .sellers__profile{
     padding-left: 1.2rem;
     display: flex;
     flex-direction: column;
@@ -2179,27 +2187,27 @@ section{
     gap: 1.2rem;
 }
 
-.seller__name{
+.sellers .seller__name{
     font-family: Roboto-Regular-woff, serif;
     font-size: clamp(13.81px, calc(0.48vw + 11.98px), 19px);
 }
 
-.sellers__value-container{
+.sellers .sellers__value-container{
     align-items: flex-start;
     justify-self: center;
 }
 
-.sellers__logo{
+.sellers .sellers__logo{
     max-width: 1rem;
     max-height: 1rem;
 }
 
-.sellers_value{
+.sellers .sellers_value{
     font-family: Roboto-Medium-woff, serif;
     font-size: clamp(10px, calc(0.31vw + 8.84px), 13.76px);
 }
 
-.sellers__percent-container{
+.sellers .sellers__percent-container{
     margin-left: auto;
 
     position: relative;
@@ -2218,7 +2226,7 @@ section{
     border-radius: 200px;
 }
 
-.sellers__percent-container:before {
+.sellers .sellers__percent-container:before {
     content: '';
     position: absolute;
     inset: 0;
@@ -2231,25 +2239,45 @@ section{
     border-radius: 200px;
 }
 
-.sellers__button-container{
+/*sellers-mobile*/
+
+.sellers .swiper--mobile{
+    display: none;
+    width: 100%;
+    margin-top: 4rem;
+    overflow: hidden;
+    height: calc((90px * 4) + (30px * 3)) !important;
+}
+
+@media (max-width: 768px) {
+    .sellers .swiper--mobile {
+        display: flex;
+    }
+}
+
+.sellers .swiper--mobile .slide__sellers {
+    width: 100%;
+    height: 90px;
+    display: flex;
+}
+
+.sellers .sellers__button-container{
     display: flex;
     width: fit-content;
     margin-top: 6.2rem;
 }
 
 @media (max-width: 1024px){
-    .sellers__button-container{
+    .sellers .sellers__button-container{
         display: none;
-        align-items: center;
-        justify-content: center;
     }
 }
 
-.sellers__button{
+.sellers .sellers__button{
     padding: 1rem 6rem;
 }
 
-.sellers__button-text{
+.sellers .sellers__button-text{
     font-family: Rajdhani-SemiBold-woff, serif;
     font-size: clamp(0.7rem, 1.3rem, 2.5rem);
 }
@@ -2666,6 +2694,7 @@ section.form{
 }
 
 .footer .menu .title-container{
+    cursor: pointer;
     width: 100%;
     display: flex;
     justify-content: space-between;
