--- a/css/style.css
+++ b/css/style.css
@@ -587,6 +587,7 @@ section {
 
 @media (max-width: 575px) {
     .top-nft .title {
+        padding-left: 1rem;
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
@@ -1236,7 +1237,7 @@ section {
 
 @media (max-width: 1024px) {
     .discover .counter .item:not(:last-child)::after {
-        right: -90%;
+        right: -210%;
     }
 }
 
@@ -2065,6 +2066,13 @@ section {
     }
 }
 
+@media (max-width: 768px) {
+    .sellers {
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+}
+
 .sellers .title {
     display: flex;
     flex-direction: column;
@@ -2241,10 +2249,11 @@ section {
 }
 
 @media (max-width: 768px) {
-    .sellers .swiper .slide__sellers {
+    .sellers .swiper--mobile .slide__sellers {
         width: 100%;
         height: 90px !important;
         margin-left: 0 !important;
+        padding: 2rem 1rem 2rem 1rem;
     }
 }
 
@@ -2267,12 +2276,27 @@ section {
     font-size: clamp(13.81px, 1.3vw, 19px);
 }
 
+@media (max-width: 768px) {
+    padding-left: 0.6rem;
+}
+
 .sellers .sellers__picture {
     padding-left: 1.2rem;
+    width: fit-content;
+    height: fit-content;
 }
 
 .sellers .sellers__picture-img {
+    width: 100%;
+    height: 100%;
+
     max-width: 5rem;
+}
+
+@media (max-width: 768px) {
+    .sellers .sellers__picture-img {
+        max-width: 3.8rem;
+    }
 }
 
 .sellers .sellers__profile {
@@ -2282,6 +2306,13 @@ section {
     align-items: flex-start;
     justify-content: center;
     gap: 1.2rem;
+}
+
+@media (max-width: 768px) {
+    .sellers .sellers__profile {
+        padding-left: 0.4rem;
+        gap: 0.5rem;
+    }
 }
 
 .sellers .seller__name {
@@ -2323,6 +2354,12 @@ section {
     border-radius: 200px;
 }
 
+@media (max-width: 768px) {
+    .sellers .sellers__percent-container {
+        padding: 0.7rem 1rem;
+    }
+}
+
 .sellers .sellers__percent-container:before {
     content: '';
     position: absolute;
@@ -2341,9 +2378,15 @@ section {
 .sellers .swiper--mobile {
     display: none;
     width: 100%;
-    margin-top: 4rem;
+    margin-top: 2rem;
     overflow: hidden;
     height: calc((90px * 4) + (30px * 3)) !important;
+}
+
+.sellers .swiper--mobile .swiper-wrapper {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
 }
 
 @media (max-width: 768px) {
@@ -2354,7 +2397,7 @@ section {
 
 .sellers .swiper--mobile .slide__sellers {
     width: 100%;
-    height: 90px;
+    height: 90px !important;
     display: flex;
 }
 
@@ -2617,6 +2660,7 @@ section.form {
 @media (max-width: 1024px) {
     .form .input {
         padding: 0.8rem 1.2rem;
+        max-width: 14rem;
     }
 }
 
@@ -2624,6 +2668,12 @@ section.form {
     max-width: 10.4rem;
     width: 100%;
     border-radius: 0 0.4rem 0.4rem 0;
+}
+
+@media (max-width: 575px) {
+    .form .button-container {
+        max-width: 6.5rem;
+    }
 }
 
 .form .button {
@@ -2691,7 +2741,7 @@ section.form {
 
 @media (max-width: 1024px) {
     .footer:before {
-        top: 7.6rem;
+        top: 8.3rem;
     }
 }
 
