--- a/css/style.css
+++ b/css/style.css
@@ -1894,10 +1894,15 @@ section {
     transition: opacity 0.6s ease-in-out;
 }
 
+@media (max-width: 1440px) {
+    .tabs .picture {
+        transform: translateX(0);
+    }
+}
+
 @media (max-width: 1024px) {
     .tabs .picture {
         max-width: 14rem;
-        transform: translateX(0);
     }
 }
 
